# Nanihold_OS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  chat_log_20260506.txt  codex-dev.cmd  compose.local.yaml  compose.yaml  conftest.py  local-review.cmd  message.txt  pyproject.toml  refactor_20260608.md  tasks.md  vsm.cmd  vsm.ps1
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
bot/: discord_codex_bot.py
config/: eep-phase1-runbook.example.toml  lethe.local.jwks.json  lethe.local.toml  nanihold.example.toml  nanihold.local.toml.template  pilot-host.local.json.template  pilot-host.production.json.template  survival-pricing.toml.example
deploy/: discord-codex-bot.service
deploy/ha/: HaContract.psm1  README.md  backup.ps1  bootstrap.ps1  empty-target.ps1  restore.ps1  (+7 more)
docs/: README.md  acr08-automation.md  acr08-e2e-matrix.md  acr08-owner-checklist-reduced.md  acr08-owner-checklist.md  agent-notification-delivery.md  api.md  architecture.md  cli.md  discord-bot.md  economics.md  eep-phase1-deployment.md  implementation-status.md  local-verification.md  migration.md  operations.md  production-pilot-host.md  reply-authoring.md  roadmap.md  routing.md  self-development.md  setup.md  web-ui.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts
openspec/: project.md
scripts/: acr08_connectivity.py  codex-dev.ps1  create_activation_runtime_env.ps1  local-review.ps1  local_pilot_host.py  production_pilot_host.py  smoke_run.py  start_activation_pilot_host.ps1
tests/: conftest.py  test_acr08.py  test_activation_pilot_host_launcher.py  test_activation_reorientation_dispatcher.py  test_agent_naming.py  test_audit_trace.py  test_capture_system_snapshot.py  test_config.py  test_environment_contract.py  test_environment_instance.py  test_fable_cli.py  test_fable_ux_golden.py  test_history_source_export.py  test_improve_audit_trace_api.py  test_interface_token_lab.py  test_interface_ux_golden.py  test_kernel.py  test_lethe_client.py  test_lethe_history_client.py  test_lethe_idempotency.py  test_local_pilot_host.py  test_migration.py  test_model_candidate.py  test_notifications.py  test_pilot_host_interface.py  test_pilot_routing.py  test_preflight.py  test_production_backend_receipts.py  test_production_pilot_host.py  test_projection_services.py  test_reorientation_cli.py  test_reorientation_revision.py  test_reply_authoring.py  test_trace_cli.py  test_tui.py  test_web_api.py
tools/: capture_system_snapshot.py  history_source_export.py  s3star_gate.py
vsm/: __init__.py  __main__.py  acr08.py  agent_naming.py  audit_trace.py  auth.py  cli.py  clock.py  config.py  dispatcher.py  environment_instance.py  errors.py  ids.py  notifications.py  preflight.py  projection.py  reply_authoring.py  roles.py  runtime.py  tui.py
(+364 files in other folders)
