[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanihold-os"
version = "0.1.0"
description = "Nanihold OS - Viable System Model runtime platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Nanihold OS contributors" }]
dependencies = [
    "fastapi>=0.115",
    "litellm",
    "python-multipart>=0.0.20",
    "pypdf>=5",
    "python-dotenv",
    "typer",
    "pydantic>=2",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
vsm = "vsm.cli:app"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]
bot = [
    "discord.py>=2.7",
]

[tool.setuptools.packages.find]
include = ["vsm*"]
exclude = ["tests*", "runs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_llm: tests that hit a live LLM provider (gated, opt-in only)",
]
