[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanihold-os"
version = "0.2.0"
description = "Nanihold OS - persistent u-VSM Node and Event control plane"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Nanihold OS contributors" }]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "typer",
    "pydantic>=2",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
vsm = "vsm.cli:app"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-asyncio",
]
[tool.setuptools.packages.find]
include = ["vsm*"]
exclude = ["tests*", "runs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live_pilot: tests that hit a live Pilot provider (gated, opt-in only)",
]
